18pp7h: fix size guide overflow on phone

--- a/styles/product-page/components/product-size-guide.scss
+++ b/styles/product-page/components/product-size-guide.scss
@@ -39,5 +39,9 @@
   .esc-size-guide--title,
   .esc-size-guide--cell-type--text {
     font-size: 16px;
+    white-space: normal;
+  }
+  .esc-size-guide--table {
+    margin-bottom: 20px;
   }
 }
